# MVB

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  context.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
api/builder/: index.html
api/cadquery-builder/: index.html
api/drawing-2d/: index.html
api/freecad-builder/: index.html
api/magnetic-builder/: index.html
api/shape-configs/: index.html
api/utils/: index.html
architecture/data-flow/: index.html
architecture/engines/: index.html
architecture/overview/: index.html
architecture/shape-hierarchy/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: builder.md  cadquery-builder.md  drawing-2d.md  freecad-builder.md  magnetic-builder.md  shape-configs.md  utils.md
docs/architecture/: data-flow.md  engines.md  overview.md  shape-hierarchy.md
docs/assets/stylesheets/: extra.css
docs/getting-started/: installation.md  quickstart.md
docs/shapes/: c-family.md  e-family.md  index.md  p-family.md  planar-family.md  toroidal-family.md  u-family.md
docs/testing/: guide.md
docs/tutorials/: c-core-example.md  complete-magnetic.md  core-generation.md  technical-drawings.md  toroidal-winding.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: generate_changelog.py  generate_shape_svgs.py
search/: search_index.json
shapes/: index.html
shapes/c-family/: index.html
shapes/e-family/: index.html
shapes/p-family/: index.html
shapes/planar-family/: index.html
shapes/toroidal-family/: index.html
shapes/u-family/: index.html
src/: builder.py  utils.py
src/OpenMagneticsVirtualBuilder/: __init__.py  builder.py  cadquery_builder.py  drawing_2d.py  freecad_builder.py  magnetic_builder.py  shape_configs.py  utils.py
testing/guide/: index.html
tests/: context.py  test_2d_drawings.py  test_assembly.py  test_bobbin.py  test_builder.py  test_full_pipeline.py  test_magnetic.py  test_toroidal.py  test_winding.py
tests/testData/: C20_30u_8T_5mm.json  ETD49_N87_10uH_5T.json  PQ4040_10u_6T_foil.json  T402416_edge40_4uH_8T.json  concentric_example.json  concentric_rectangular_column_full_layer.json  concentric_rectangular_column_one_turn.json  concentric_rectangular_column_two_layers.json  concentric_rectangular_column_two_layers_with_bobbin.json  concentric_rectangular_column_two_turns.json  concentric_round_column_four_layers.json  concentric_round_column_one_rectangular_turn.json  concentric_round_column_two_layers_rectangular_turns.json  test_wind_three_sections_two_layer_toroidal_contiguous_spread_top_additional_coordinates.json  toroidal_full_layer.json  toroidal_full_layer_rectangular_wires.json  toroidal_one_turn.json  toroidal_one_turn_rectangular_wire.json  toroidal_two_layers_not_compact.json  toroidal_two_turns_centered.json  toroidal_two_turns_spread.json
tutorials/c-core-example/: index.html
tutorials/complete-magnetic/: index.html
tutorials/core-generation/: index.html
tutorials/technical-drawings/: index.html
tutorials/toroidal-winding/: index.html
